<?xml version="1.0"?>
<package>
  <name>testqt5_create</name>
  <version>1.0.1</version>
  <description>Rescue Robot GUI</description>
  <maintainer email="chot.embedded@gmail.com">Rachot Phuengsuk</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
